--- a/AI_Search_Experimentation_Notebook.ipynb
+++ b/AI_Search_Experimentation_Notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "f56a4093",
    "metadata": {},
    "outputs": [
@@ -82,30 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4a9b085f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The initial state of the level is:\n",
-      "++++++++++\n",
-      "+0       +\n",
-      "+     ++++\n",
-      "+        +\n",
-      "+     ++ +\n",
-      "+      + +\n",
-      "++++++++++\n",
-      "\n",
-      "The goal description of the level is:\n",
-      "((5, 8), '0', True)\n",
-      "\n",
-      "So agent zero starts at (1, 1) and satisfies the goal at (5, 8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function to load a level file\n",
     "def load_level_file_from_path(path):\n",
@@ -148,25 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "feeac4ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "State rendered and saved to give_me_a_name.png\n",
-      "++++++++++\n",
-      "+0       +\n",
-      "+     ++++\n",
-      "+        +\n",
-      "+     ++ +\n",
-      "+      + +\n",
-      "++++++++++\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "from renderState import *\n",
@@ -196,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5b4759ea-a320-4416-acd6-507d26e24641",
    "metadata": {},
    "outputs": [],
@@ -231,20 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "35252cf9-8e48-4519-87ce-3cdc1b29af91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.32.56, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Finished executing the plan\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Here is an example of a plan. A plan is a list of list of actions, where an action is an instance from searchclient.domains.hospital.actions\n",
     "# The first axis of the list corresponds to a timestep in the plan. \n",
@@ -274,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "cea2da73",
    "metadata": {},
    "outputs": [],
@@ -314,31 +269,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "344c495f-6844-436a-a7db-1ca890bcf913",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planning successful: True\n",
-      "Plan: [[Move(S)], [Move(E)], [Move(S)], [Move(E)], [Move(E)], [Move(E)], [Move(E)], [Move(E)], [Move(E)], [Move(S)], [Move(S)]]\n",
-      "Solution length: 11\n",
-      "Number of states generated: 34\n",
-      "Elapsed time: 0,000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "#Expanded:       34, #Frontier:        0, #Generated:       34, Time: 0,000 s, Memory: 83,31 MB\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now that we have defined the initial state, action set, goal description, and frontier, we can run the search algorithm\n",
     "planning_success, plan, num_generated, elapsed_time = graph_search(initial_state, action_set, goal_description, frontier)\n",
@@ -353,20 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2bb7fde2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.32.56, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Exiting...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "render_plan(level_path, plan, strategy_name, heuristic_name, num_generated, elapsed_time, len(plan))"
    ]
@@ -385,30 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "caac2811-3319-4033-bf19-1ecef909fede",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The initial state of the level is:\n",
-      "++++++++++\n",
-      "+0       +\n",
-      "+     ++++\n",
-      "+        +\n",
-      "+     ++ +\n",
-      "+      + +\n",
-      "++++++++++\n",
-      "\n",
-      "The goal description of the level is:\n",
-      "((5, 8), '0', True)\n",
-      "\n",
-      "So agent zero starts at (1, 1) and satisfies the goal at (5, 8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For easiness of use, let's redifine and reload everything  \n",
     "level_path = \"levels/MAPF00.lvl\"\n",
@@ -431,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5c751d41-b646-4333-b9e1-d54f755fc5f9",
    "metadata": {},
    "outputs": [],
@@ -471,71 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "15f67ce0-c131-494e-b813-1bbd002dcff8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb5288374bcf4269b4e87fbd12ecad77",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average solution legth: 13.0\n",
-      "Solution length variance : 3.2\n",
-      "Average number of states generated: 36.8\n",
-      "Number of states generated variance : 8.36\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "#Expanded:       31, #Frontier:        6, #Generated:       37, Time: 0,001 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       33, #Frontier:        7, #Generated:       40, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       25, #Frontier:       11, #Generated:       36, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       27, #Frontier:       10, #Generated:       37, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       22, #Frontier:        7, #Generated:       29, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       34, #Frontier:        5, #Generated:       39, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       27, #Frontier:        9, #Generated:       36, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       32, #Frontier:        6, #Generated:       38, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       31, #Frontier:        8, #Generated:       39, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:       26, #Frontier:       11, #Generated:       37, Time: 0,000 s, Memory: 89,36 MB\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_trials = 10\n",
     "\n",
@@ -557,20 +400,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e67df5ef-485d-433e-a401-1ecc67659883",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.32.56, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Exiting...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# In case you want to visualize the i-th trial\n",
     "\n",
@@ -596,76 +429,7 @@
    "execution_count": null,
    "id": "19584959",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The initial state of the level is:\n",
-      "++++\n",
-      "+0 +\n",
-      "+  +\n",
-      "++++\n",
-      "\n",
-      "The goal description of the level is:\n",
-      "((2, 2), '0', True)\n",
-      "\n",
-      "So agent zero starts at (1, 1) and satisfies the goal at (2, 2)\n",
-      "\n",
-      "\n",
-      "\n",
-      "------------------------------\n",
-      "\n",
-      "\n",
-      "\n",
-      "The initial state of the level is:\n",
-      "++++++++\n",
-      "+0     +\n",
-      "+2     +\n",
-      "+1     +\n",
-      "++++++++\n",
-      "\n",
-      "The goal description of the level is:\n",
-      "((1, 2), '0', True) and ((2, 4), '1', True)\n",
-      "\n",
-      "So agent zero starts at (1, 1) and satisfies the goal at (1, 2)\n",
-      "and agent one starts at (3, 1) and satisfies the goal at (2, 4)\n",
-      "State rendered and saved to simple_initial_state.png\n",
-      "State rendered and saved to two_agent_debug_initial_state.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "#Expanded:        4, #Frontier:        1, #Generated:        5, Time: 0,000 s, Memory: 111,17 MB\n",
-      "\n",
-      "\n",
-      "#Expanded:    2.363, #Frontier:    1.392, #Generated:    3.755, Time: 0,128 s, Memory: 130,03 MB\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simple level planning success: True Plan: [[Move(E)], [Move(S)]] Number of states generated: 5 Elapsed time: 0,000\n",
-      "Two agent level planning success: True Plan: [(Move(E), Move(E), Move(E)), (Move(E), Move(E), Move(E)), (NoOp, Move(E), NoOp), (Move(W), Move(N), NoOp)] Number of states generated: 3755 Elapsed time: 0,128\n",
-      "pygame 2.6.1 (SDL 2.32.56, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Finished executing the plan\n",
-      "pygame 2.6.1 (SDL 2.32.56, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Finished executing the plan\n",
-      "+++++\n",
-      "+0+ +\n",
-      "+ + +\n",
-      "+ + +\n",
-      "+++++\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#MAVIS 1.1\n",
     "\n",
@@ -808,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -822,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
